# bulwark-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  GO-TO-MARKET-2026-06-13.md  MARKET-COMPARISON-GROWTH-2026-06-13.md  Makefile  README.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml  security.yml
.opencode/: config.json
.opencode/skills/add-guardrail/: SKILL.md
.opencode/skills/add-ioc-feed/: SKILL.md
.opencode/skills/add-policy/: SKILL.md
.opencode/skills/audit-patterns/: SKILL.md
.opencode/skills/compliance-audit/: SKILL.md
.opencode/skills/run-tests/: SKILL.md
admin/: main.py
admin/models/: __init__.py  auth.py  config.py  iocs.py  metrics.py  tenants.py
admin/routes/: audit.py  auth.py  config.py  discovery.py  enrichment.py  evaluation.py  events.py  gdpr.py  guardrails.py  health.py  iocs.py  ml_scanners.py  notifications.py  plugins.py  policies.py  rate_limits.py  rbac.py  siem.py  skills.py  tenants.py  users.py  validate.py
admin/services/: audit_chain.py  audit_logger.py  auth_service.py  config_manager.py  config_validator.py  database.py  feed_scheduler.py  gdpr.py  guardrails_store.py  ioc_store.py  mcp_poisoning.py  mcp_privilege.py  migrations.py  orchestrator_bridge.py  prometheus_client.py  redis_sync.py  secrets.py  skill_scanner.py  tenant_manager.py  user_store.py
admin/static/: sri-hashes.json
admin/templates/: base.html
ci/: .gitlab-ci.yml  Jenkinsfile  azure-pipelines.yml  values-production.yaml  values-region-primary.yaml  values-region-standby.yaml  values-staging.yaml
ci/tekton/: pipeline.yaml
config/: agents.yaml  iocs.json  notifications.yaml
config/feeds/: README.md
config/policies/: default-deny.yaml  example-acme.yaml  example-default.yaml  healthcare-tenant.yaml
config/siem/: crowdstrike_sentinelone_arcsight_logrhythm_fortisiem.yaml  datadog.yaml  elastic_elk.yaml  ibm_qradar.yaml  microsoft_sentinel.yaml  splunk_es.yaml  wazuh_graylog_security_onion.yaml
docker/: Dockerfile.admin
docker/wazuh/: ossec-sentinel.conf  sentinel-decoders.xml  sentinel-rules.xml
docs/: API-REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  CICD.md  DEPLOYMENT.md  INDEX.md  MULTI-REGION.md  NOTIFICATIONS.md  OPERATIONS.md  ROADMAP.md  SECURITY-HARDENING.md  TROUBLESHOOTING.md  openapi.yaml
docs/runbooks/: README.md  alert-backend-errors.md  alert-certificate-expiry.md  alert-guardrail-latency.md  alert-high-block-rate.md  alert-redis-down.md  incident-data-breach.md  incident-guardrail-bypass.md  ir-plan.md
helm/sentinel-gateway/: .helmignore  Chart.yaml  values.yaml
k8s/: deploy.sh  kustomization.yaml  namespace.yaml
k8s/base/: admin.yaml  configmaps.yaml  external-backends.yaml  ingress.yaml  network-policies.yaml  pdb.yaml  proxy.yaml  redis.yaml  volumes.yaml
k8s/monitoring/: namespace-siem.yaml  prometheus-grafana.yaml  wazuh.yaml
k8s/secrets/: generate-sealed-secrets.sh  generate-secrets.sh  sealed-secrets.yaml
models/toxicity/: config.json
monitoring/prometheus/: recording-rules.yml
prometheus/: prometheus.yml  rules.yml  web.yml
reports/redteam/: FULL-AUDIT-2026-06-14.md
scripts/: build-ui.sh  download-enrichment-model.py  download-models.py  export_models.py  expose.sh  generate-mtls-certs.sh  ir-collect-evidence.sh  policy-rollback.sh  run-benchmarks.py  security-smoke-test.py  validate-deployment.sh
sdk/: README.md  pyproject.toml
sdk-go/: README.md  client.go  errors.go  examples_test.go  go.mod  guard.go  models.go  options.go  scan.go
sdk/src/sentinel_sdk/: __init__.py  client.py  exceptions.py  guard.py  models.py
sdk/src/sentinel_sdk/integrations/: __init__.py  langchain.py  openai.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
secrets/: init.sh
src/: __init__.py  config.py  main.py  models.py
src/dialog/: __init__.py  engine.py
src/discovery/: __init__.py  agent_discovery.py  mcp_inventory.py  shadow_ai.py
src/enrichment/: __init__.py  attack_replay_db.py  base.py  embedding_scanner.py  manager.py  skill_scanner.py
src/evaluation/: __init__.py  attacks.py  cli.py  datasets.py  runner.py
src/guardrails/: __init__.py  dynamic_registry.py  input_guardrail.py  output_filter.py  session_tracker.py  tool_policy.py
src/ioc/: __init__.py  manager.py
src/middleware/: api_version.py  auth.py  jwt_keys.py  mtls.py  quotas.py  rate_limit.py  tenant_router.py
src/plugins/: __init__.py  cli.py  manager.py  sandbox.py  spec.py
src/policies/: __init__.py  loader.py
src/routes/: admin.py  health.py  proxy.py
src/scanners/: __init__.py  discovery.py  pipeline.py  protocol.py
src/sdk/: __init__.py  guard.py
src/services/: __init__.py  agent_registry.py  cost_tracker.py  domain_intel.py  ioc_feeds.py  response_cache.py  virtual_keys.py
src/telemetry/: __init__.py  counters.py  exporter.py  notifications.py  queue.py  schema.py  tracing.py  webhooks.py
tests/: conftest.py  test_admin_integration.py  test_agent_registry.py  test_cache_and_vkeys.py  test_enrichment.py  test_exhaustive_integration.py  test_gdpr.py  test_input_guardrail.py  test_integration_ioc.py  test_ioc.py  test_ml_scanners.py  test_multilingual_multimodal.py  test_output_filter.py  test_output_validation.py  test_phase5_phase6.py  test_phase7_plugins.py  test_phase8_evaluation.py  test_phase9_discovery.py  test_scanner_framework.py  test_security_hardening.py  test_streaming_guardrail.py  test_tool_policy.py
tests/chaos/: README.md  run-chaos-suite.sh  steady-state-check.sh
tests/contract/: __init__.py  conftest.py  test_api_contract.py
tests/load/: README.md  k6-config.js  run-benchmarks.sh  scenario-full-pipeline.js  scenario-guardrail-only.js  scenario-multi-tenant.js  scenario-spike.js  scenario-streaming.js
tests/qa/: legit-flows.yaml
tests/telemetry/: __init__.py  test_telemetry_integration.py  test_telemetry_performance.py  test_telemetry_unit.py
(+109 files in other folders)
