[project]
name = "sentinel-gateway"
version = "0.1.0"
description = "Security guardrail proxy for AI agents — intercepts, validates, and enforces policies on tool calls between users and LLM agents in cloud environments"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    {name = "rokitoh"}
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-jose[cryptography]>=3.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sentinel-gateway = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
