[project]
name = "sentinel-gateway"
version = "0.1.0"
description = "Security guardrail proxy for AI agents — intercepts, validates, and enforces policies on tool calls between users and LLM agents in cloud environments"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    {name = "rokitoh"}
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "PyJWT>=2.8",
    "redis>=5.0",
    "cachetools>=5.3",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
skill-scanner = [
    "skillspector>=0.1",
]
admin = [
    "python-multipart>=0.0.9",
]
ml = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]
ml-gpu = [
    "onnxruntime-gpu>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]
multilingual = [
    "lingua-language-detector>=2.0",
]
vision = [
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sentinel-gateway = "src.main:main"
sentinel-plugin = "src.plugins.cli:main"
sentinel-evaluate = "src.evaluation.cli:main"

# Scanner plugins register here. Third-party packages use:
# [project.entry-points."sentinel.scanners"]
# my_scanner = "my_package.module:MyScannerClass"
[project.entry-points."sentinel.scanners"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"src/guardrails/input_guardrail.py" = ["E501"]
"src/guardrails/output_filter.py" = ["E501"]
"tests/*" = ["E501", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
