[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-gateway-sdk"
version = "0.1.0"
description = "Python SDK for Sentinel Gateway — AI security guardrail proxy"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
    { name = "Sentinel Gateway Contributors" },
]
keywords = ["ai", "security", "guardrails", "llm", "proxy", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
openai = ["openai>=1.0"]
all = ["langchain-core>=0.2", "openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/sentinel-gateway/sentinel-gateway"
Documentation = "https://github.com/sentinel-gateway/sentinel-gateway/tree/main/sdk"
Repository = "https://github.com/sentinel-gateway/sentinel-gateway"
Issues = "https://github.com/sentinel-gateway/sentinel-gateway/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_sdk"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "RUF"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
